--- a/gc-redis/gc-data-redisson/pom.xml
+++ b/gc-redis/gc-data-redisson/pom.xml
@@ -71,6 +71,18 @@
             <version>2.4.3</version>
         </dependency>
 
+        <!-- aop 操作-->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.76</version>
+        </dependency>
+
     </dependencies>
 
     <build>
