--- a/gc-redis/gc-data-redisson/src/main/resources/application.properties
+++ b/gc-redis/gc-data-redisson/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port= 10182
 
 # 单机模式
-## Redis数据库索引（默认为0）
-#spring.redis.database=0
-## Redis服务器地址
-#spring.redis.host=127.0.0.1
-## Redis服务器连接端口
-#spring.redis.port=6379
-## Redis服务器连接密码（默认为空）
-#spring.redis.password= 12345
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=127.0.0.1
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password= 12345
 ## 连接池最大连接数（使用负值表示没有限制）
 #spring.redis.jedis.pool.max-active=20
 ## 连接池最大阻塞等待时间（使用负值表示没有限制）
@@ -23,8 +23,8 @@ server.port= 10182
 ##################### redisson 操作 ##########################################
 
 # redisson lock
-redisson.address=redis://127.0.0.1:6379
-redisson.password=12345
+#redisson.address=redis://127.0.0.1:6379
+#redisson.password=12345
 
 #哨兵模式
 #spring.redis.host=127.0.0.1
