--- a/gc-kafka/src/main/resources/application.properties
+++ b/gc-kafka/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.kafka.consumer.max-poll-records = 100
 # 消费会话超时时间(超过这个时间consumer没有发送心跳,就会触发rebalance操作)
 spring.kafka.consumer.session.timout.ms = 50000
 # 消费请求超时时间
-spring.kafka.consumer.properties.request.timeout.ms=180000
+request.timeout.ms=180000
 spring.kafka.consumer.max.poll.interval.ms = 10000
-spring.kafka.consumer.heartbeat.interval.ms = 8000
+heartbeat.interval.ms = 8000
 #spring.kafka.listener.ack-mode=manual
 
 
