--- a/gc-kafka/kafka-consumer/pom.xml
+++ b/gc-kafka/kafka-consumer/pom.xml
@@ -36,7 +36,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
-            <!--            <version>2.4.2</version>-->
         </dependency>
 
     </dependencies>
@@ -50,8 +49,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
                 <configuration>
-                    <testFailureIgnore>true</testFailureIgnore>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
         </plugins>
