--- a/gc-rabbitmq/rabbitmq-consumer/src/main/resources/application.yml
+++ b/gc-rabbitmq/rabbitmq-consumer/src/main/resources/application.yml
@@ -6,14 +6,14 @@ spring:
     name: rabbitmq-consumer
   #配置rabbitMq 服务器
   rabbitmq:
-    host: 127.0.0.1
-    port: 5672
-    username: root
-    password: root
+    host: 1.14.251.70
+    port: 30040
+    username: weiban
+    password: admin123.
     #虚拟host 可以不设置,使用server默认host
-    virtual-host: JCcccHost
+#    virtual-host: JCcccHost
 
     #确认消息已发送到交换机(Exchange)
-    publisher-confirms: true
+#    publisher-confirms: true
     #确认消息已发送到队列(Queue)
     publisher-returns: true
