--- a/gc-rabbitmq/rabbitmq-provider/src/main/resources/application.yml
+++ b/gc-rabbitmq/rabbitmq-provider/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     name: rabbitmq-provider
   #配置rabbitMq 服务器
   rabbitmq:
-    host: 127.0.0.1
-    port: 5672
-    username: root
-    password: root
+    host: 1.14.251.70
+    port: 30040
+    username: weiban
+    password: admin123.
     #虚拟host 可以不设置,使用server默认host
-    virtual-host: JCcccHost
+#    virtual-host: JCcccHost
