--- a/gc-kafka/pom.xml
+++ b/gc-kafka/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>kafka-producer</module>
         <module>kafka-consumer</module>
+        <module>kafka-stream</module>
     </modules>
 
 </project>
