--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.5.RELEASE</version>
+        <version>2.6.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.allen</groupId>
@@ -46,6 +46,7 @@
         <module>gc-keepalived</module>
         <module>gc-bigdata</module>
         <module>gc-bigdata/gc-hdfs</module>
+        <module>gc-spider</module>
     </modules>
 
     <properties>
