--- a/gc-springboot/pom.xml
+++ b/gc-springboot/pom.xml
@@ -36,6 +36,12 @@
             <groupId>org.springframework.retry</groupId>
             <artifactId>spring-retry</artifactId>
         </dependency>
+
+		<dependency>
+			<groupId>io.github.guyuefeng2016</groupId>
+			<artifactId>gen-test</artifactId>
+			<version>0.0.3</version>
+		</dependency>
     </dependencies>
 
 	<build>
