--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <module>gc-algorithm</module>
         <module>gc-zuul</module>
         <module>gc-datasource</module>
-        <module>gc-jdbc</module>
+        <module>gc-mysql</module>
         <module>gc-upload</module>
         <module>gc-design-pattern</module>
         <module>gc-sharding-jdbc</module>
