--- a/gc-apollo/pom.xml
+++ b/gc-apollo/pom.xml
@@ -22,11 +22,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.ctrip.framework.apollo/apollo-client -->
         <dependency>
             <groupId>com.ctrip.framework.apollo</groupId>
             <artifactId>apollo-client</artifactId>
-            <version>1.8.0</version>
+            <version>${apollo-client.version}</version>
         </dependency>
 
     </dependencies>
