--- a/gc-docker-k8s/pom.xml
+++ b/gc-docker-k8s/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>gc-docker</artifactId>
+    <artifactId>gc-docker-k8s</artifactId>
 
 
 </project>
