--- a/gc-mybatis-tk/pom.xml
+++ b/gc-mybatis-tk/pom.xml
@@ -13,7 +13,6 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <mysql-connector-java.version>8.0.19</mysql-connector-java.version>
     </properties>
 
 
@@ -22,24 +21,23 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
-            <version>${mysql-connector-java.version}</version>
         </dependency>
         <!--代码生成使用-->
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper</artifactId>
-            <version>3.4.2</version>
+            <version>${mapper-spring-boot-starter.version}</version>
         </dependency>
         <!--通用mapper-->
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
-            <version>2.1.5</version>
+            <version>${mapper-spring-boot-starter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis.generator</groupId>
             <artifactId>mybatis-generator-core</artifactId>
-            <version>1.3.7</version>
+            <version>1.4.1</version>
         </dependency>
     </dependencies>
 
