--- a/gc-sharding-jdbc/pom.xml
+++ b/gc-sharding-jdbc/pom.xml
@@ -11,12 +11,6 @@
 
     <artifactId>gc-sharding-jdbc</artifactId>
 
-    <properties>
-        <druid.version>1.2.2</druid.version>
-        <mysql-connector-java.version>8.0.19</mysql-connector-java.version>
-        <java.version>1.8</java.version>
-    </properties>
-
     <dependencies>
     <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -32,34 +26,27 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
-            <version>${mysql-connector-java.version}</version>
         </dependency>
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
-            <version>2.1.5</version>
+            <version>${mapper-spring-boot-starter.version}</version>
         </dependency>
     <dependency>
         <groupId>com.alibaba</groupId>
         <artifactId>druid</artifactId>
         <version>${druid.version}</version>
     </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.apache.shardingsphere</groupId>-->
-<!--            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>-->
-<!--            <version>4.0.0-RC1</version>-->
-<!--        </dependency>-->
 
         <dependency>
             <groupId>io.shardingsphere</groupId>
             <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
-            <version>3.0.0</version>
+            <version>4.1.1</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.16</version>
             <scope>provided</scope>
         </dependency>
 
