--- a/gc-sharding-jdbc/pom.xml
+++ b/gc-sharding-jdbc/pom.xml
@@ -39,9 +39,9 @@
     </dependency>
 
         <dependency>
-            <groupId>io.shardingsphere</groupId>
+            <groupId>org.apache.shardingsphere</groupId>
             <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
-            <version>4.1.1</version>
+            <version>${sharding-jdbc.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
