--- a/pom.xml
+++ b/pom.xml
@@ -70,9 +70,15 @@
         <apollo-client.version>2.0.1</apollo-client.version>
         <mapper-spring-boot-starter.version>4.2.2</mapper-spring-boot-starter.version>
         <pagehelper.version>5.3.2</pagehelper.version>
+        <sharding-jdbc.version>4.1.1</sharding-jdbc.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+            <version>${sharding-jdbc.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
