oauth2代码、mysql驱动包调整

--- a/gc-redis/pom.xml
+++ b/gc-redis/pom.xml
@@ -15,6 +15,7 @@
         <module>gc-data-redis</module>
         <module>gc-data-jedis</module>
         <module>gc-data-redisson</module>
+        <module>boot-starter-redis</module>
     </modules>
 
 </project>
