--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring-boot.version>3.0.0</spring-boot.version>
         <spring-cloud-dependencies.version>2022.0.0</spring-cloud-dependencies.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <lombok.version>1.18.24</lombok.version>
