--- a/gc-dubbo/gc-dubbo-provider/pom.xml
+++ b/gc-dubbo/gc-dubbo-provider/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
-            <version>3.1.3</version>
+            <version>3.2.0-beta.3</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-framework -->
