--- a/gc-redis/gc-data-jedis/pom.xml
+++ b/gc-redis/gc-data-jedis/pom.xml
@@ -55,6 +55,10 @@
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
