--- a/gc-oauth2/oauth2-server/pom.xml
+++ b/gc-oauth2/oauth2-server/pom.xml
@@ -70,12 +70,13 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>com.allen</groupId>
             <artifactId>boot-starter-redis</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
+
     </dependencies>
 
     <build>
