--- a/gc-oauth2/pom.xml
+++ b/gc-oauth2/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>oauth2-resource</module>
         <module>oauth2-client</module>
+        <module>oauth2-server</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
