--- a/gc-redis/boot-starter-redis/pom.xml
+++ b/gc-redis/boot-starter-redis/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
-            <version>3.19.0</version>
+<!--            <version>${redisson.version}</version>-->
         </dependency>
     </dependencies>
 
