--- a/gc-redis/gc-data-redisson/pom.xml
+++ b/gc-redis/gc-data-redisson/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
-            <version>3.19.0</version>
+            <version>${redisson.version}</version>
         </dependency>
 
         <dependency>
@@ -57,11 +57,11 @@
             <version>${guava.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-pool2</artifactId>
-            <version>2.11.1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.commons</groupId>-->
+<!--            <artifactId>commons-pool2</artifactId>-->
+<!--            <version>2.11.1</version>-->
+<!--        </dependency>-->
 
         <!-- aop 操作-->
         <dependency>
@@ -69,7 +69,6 @@
             <artifactId>aspectjweaver</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
