增加gc-bom，参考项目，用于版本管理

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
         <module>gc-ddd</module>
         <module>gc-architecture</module>
         <module>gc-oauth2</module>
+        <module>gc-bom</module>
     </modules>
 
     <properties>
