增加camunda 框架工作流

--- a/gc-activiti/pom.xml
+++ b/gc-activiti/pom.xml
@@ -11,6 +11,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>activiti-flowable</module>
+        <module>gc-camunda</module>
     </modules>
 
     <distributionManagement>
